<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:orientation="vertical"
    android:background="@drawable/login"
    >


    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="347dp"
        android:background="@color/contentB"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@color/black"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/create_account"
                android:textColor="@color/create_now"
                android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="231dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/login" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>